load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "k8s.io/dns/cmd/dnsmasq-nanny",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/dns/config:go_default_library",
        "//pkg/dnsmasq:go_default_library",
        "//vendor/github.com/golang/glog:go_default_library",
    ],
)

go_binary(
    name = "dnsmasq-nanny",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
