load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "k8s.io/dns/cmd/e2e",
    visibility = ["//visibility:private"],
    deps = ["//pkg/e2e:go_default_library"],
)

go_binary(
    name = "e2e",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
