load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "k8s.io/dns/cmd/sidecar",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/sidecar:go_default_library",
        "//pkg/version:go_default_library",
        "//vendor/github.com/golang/glog:go_default_library",
        "//vendor/github.com/miekg/dns:go_default_library",
        "//vendor/github.com/spf13/pflag:go_default_library",
        "//vendor/k8s.io/apiserver/pkg/util/flag:go_default_library",
        "//vendor/k8s.io/kubernetes/pkg/util/logs:go_default_library",
    ],
)

go_binary(
    name = "sidecar",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["probeoptions_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//pkg/sidecar:go_default_library",
        "//vendor/github.com/miekg/dns:go_default_library",
    ],
)
