load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "metrics.go",
        "nanny.go",
    ],
    importpath = "k8s.io/dns/pkg/dnsmasq",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/dns/config:go_default_library",
        "//vendor/github.com/golang/glog:go_default_library",
        "//vendor/github.com/miekg/dns:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "metrics_test.go",
        "nanny_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//pkg/dns/config:go_default_library",
        "//pkg/test:go_default_library",
        "//vendor/github.com/miekg/dns:go_default_library",
        "//vendor/github.com/onsi/gomega:go_default_library",
    ],
)
