load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "cluster.go",
        "doc.go",
        "docker.go",
        "framework.go",
        "logger.go",
        "options.go",
        "util.go",
    ],
    importpath = "k8s.io/dns/pkg/e2e",
    visibility = ["//visibility:public"],
)
