load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "dnsprobe.go",
        "metrics.go",
        "options.go",
        "server.go",
    ],
    importpath = "k8s.io/dns/pkg/sidecar",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/dnsmasq:go_default_library",
        "//vendor/github.com/golang/glog:go_default_library",
        "//vendor/github.com/miekg/dns:go_default_library",
        "//vendor/github.com/prometheus/client_golang/prometheus:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "dnsprobe_test.go",
        "server_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//pkg/dnsmasq:go_default_library",
        "//pkg/test:go_default_library",
        "//vendor/github.com/miekg/dns:go_default_library",
        "//vendor/github.com/stretchr/testify/assert:go_default_library",
    ],
)
