load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["federation.go"],
    importpath = "k8s.io/dns/pkg/dns/federation",
    visibility = ["//visibility:public"],
    deps = ["//vendor/k8s.io/apimachinery/pkg/util/validation:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["federation_test.go"],
    embed = [":go_default_library"],
    deps = ["//vendor/github.com/stretchr/testify/assert:go_default_library"],
)
