load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["treecache.go"],
    importpath = "k8s.io/dns/pkg/dns/treecache",
    visibility = ["//visibility:public"],
    deps = ["//vendor/github.com/skynetservices/skydns/msg:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["treecache_test.go"],
    embed = [":go_default_library"],
    deps = ["//vendor/github.com/skynetservices/skydns/msg:go_default_library"],
)
